--- a/src/app/pages/deliveries/deliveries.component.html
+++ b/src/app/pages/deliveries/deliveries.component.html
@@ -1,3 +1,56 @@
-<p>
-  deliveries works!
-</p>
+<div class="box box-primary">    
+  <div class="box-body">
+     <!--<span id="responseText"></span>
+		<table class="table table-striped" [mfData]="data" #mf="mfDataTable" [mfRowsOnPage]="10">
+		<thead>
+		<tr>
+		    <th style="width: 20%">
+		        <mfDefaultSorter by="name">Name</mfDefaultSorter>
+		    </th>
+		    <th style="width: 30%">
+		        <mfDefaultSorter by="email">Email</mfDefaultSorter>
+		    </th>
+		    <th style="width: 20%">
+		        <mfDefaultSorter by="age">Age</mfDefaultSorter>
+		    </th>
+		    <th style="width: 20%">
+		        <mfDefaultSorter by="city">City</mfDefaultSorter>
+		    </th>
+		</tr>
+		</thead>
+		<tbody>
+		<tr *ngFor="let item of mf.data">
+		    <td>{{item.name}}</td>
+		    <td>{{item.email}}</td>
+		    <td>{{item.age}}</td>
+		    <td>{{item.city | uppercase}}</td>
+		</tr>
+		</tbody>
+		<tfoot>
+		<tr>
+		    <td colspan="4">
+		        <mfBootstrapPaginator></mfBootstrapPaginator>
+		    </td>
+		</tr>
+		</tfoot>
+		</table> -->
+
+      <ngx-datatable
+        #myTable
+        class="material"
+        [rows]="rows"
+        [columns]="[{name:'Name'},{name:'Gender'},{name:'Company'}]"
+        [columnMode]="'force'"
+        [headerHeight]="50"
+        [loadingIndicator]="isLoading"
+        [scrollbarV]="true"
+        [footerHeight]="50"
+        [rowHeight]="50"
+        [externalPaging]="true"
+        [count]="page.totalElements"
+        [offset]="page.pageNumber"
+        (page)='setPage($event)'>
+      </ngx-datatable>
+    
+</div>
+</div>
