added fileds to onboarding forms

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,8 +16,8 @@
           <ng-template ngbPanelContent>
             <ul class="list-group list-group-flush">
               <li class="list-group-item">
-                <a class="nav-link sales-link"  routerLink="/onboarding">Businesses 
-                  <i class="fa fa-money-bill" style="color:#88b840"></i>
+                <a class="nav-link sales-link"  routerLink="/onboarding">Partners 
+                  <i class="fa fa-list" style="color:#88b840"></i>
                 </a>
               </li>
                <li class="list-group-item">
@@ -27,7 +27,7 @@
               </li>
               <li class="list-group-item">
                 <a class="nav-link sales-link"  routerLink="/sales">Sales 
-                  <i class="fa fa-money-bill" style="color:#88b840"></i>
+                  <i class="fa fa-cart-plus" style="color:#88b840"></i>
                 </a>
               </li>
               <li class="list-group-item">
@@ -108,7 +108,7 @@
             </li>
             <li class="nav-item">
               <a class="top-link sales-link" routerLink="/sales" >
-                <i class="fa fa-money-bill-alt" style="color:#88b840"></i> Sales
+                <i class="fa fa-cart-plus" style="color:#88b840"></i> Sales
               </a>
             </li>
             <li class="nav-item">
