--- a/src/app/pages/stores/create/create.component.html
+++ b/src/app/pages/stores/create/create.component.html
@@ -29,7 +29,7 @@
             <div class="row card-header transparent border-0 text-muted">
                 <h5 class="col-sm-8">Add Store</h5>
                 <div class="col-sm-4-pull-right  widget-controls">
-                    <button class="btn btn-danger btn-sm mb-1" (click)="onList()" type="button"><i class="fa fa-bars"></i> Store List</button>
+                    <button class="btn btn-danger btn-sm float-sm-right" (click)="onList()" type="button"><i class="fa fa-bars"></i> Store List</button>
                 </div>
             </div>
             <div class="card-block pt-0 widget-body">
