updated folder structure to support ANgular Style Guide

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,7 +9,7 @@
           <ng-template ngbPanelTitle class="panel-heading">
             <h4 class="panel-title">
               <a role="button" data-toggle="collapse" data-parent="#accordion" aria-expanded="true" aria-controls="collapseOne">
-              <i class="more-less fa fa-plus"></i>Navigation
+              Navigation
               </a>
             </h4>
           </ng-template>
@@ -17,7 +17,7 @@
             <ul class="list-group list-group-flush">
               <li class="list-group-item">
                 <a class="nav-link sales-link"  routerLink="/onboarding">Partners 
-                  <i class="fa fa-list" style="color:#88b840"></i>
+                  <i class="fas fa-handshake" style="color:#88b840"></i>
                 </a>
               </li>
                <li class="list-group-item">
@@ -55,6 +55,13 @@
               
               
             </ul>
+          </ng-template>
+           <ng-template ngbPanelTitle class="panel-heading">
+            <h4 class="panel-title">
+              <a role="button" data-toggle="collapse"  aria-expanded="true" aria-controls="">
+              Navigation
+              </a>
+            </h4>
           </ng-template>
         </ngb-panel>  
 
