--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,7 +17,7 @@
             <ul class="list-group list-group-flush">
               <li class="list-group-item">
                 <a class="nav-link sales-link"  routerLink="/onboarding">Partners 
-                  <i class="fas fa-handshake" style="color:#88b840"></i>
+                  <fa-icon [icon]="handshake"></fa-icon><i class="fas fa-handshake" style="color:#88b840"></i>
                 </a>
               </li>
                <li class="list-group-item">
