--- a/src/styles.css
+++ b/src/styles.css
@@ -419,7 +419,7 @@ div.card-body{
     border-radius: 5px;
 }
 
-app-notifications,app-create,app-store,app-businessentity,app-sales,app-users,app-released,app-myaccount,app-deliveries,app-collections,app-invoicing,app-dashboard{
+app-notifications,app-login,app-create,app-store,app-businessentity,app-sales,app-users,app-released,app-myaccount,app-deliveries,app-collections,app-invoicing,app-dashboard{
     width:100%;
 }
 .datatable-row-wrapper {
