--- a/src/app/pages/users/users.component.html
+++ b/src/app/pages/users/users.component.html
@@ -1,10 +1,27 @@
-<div class="box box-primary">
-    
-    <div class="box-body">
-        <span id="responseText"></span>
-        <table class="table table-striped" id="userstable">
-        	<thead>
-                <tr class="header">                    
+<block-ui>
+    <div class="box box-primary">
+        <div class="box-body">
+           <div class="widget-controls">
+                <a  class="btn btn-info btn-sm mb-1" routerLink="/users/create"><i class="fa fa-plus"></i> Add User</a>
+                <!--<button class="btn btn-success btn-sm mb-1" type="button" (click)="exportData()"><i class="fa fa-bars"></i> Export Data</button>
+
+                <button class="btn btn-success btn-sm mb-1" type="button" (click)="print()"><i class="fa fa-bars"></i> Print</button>
+                <button class="btn btn-primary btn-sm mb-1" type="button" data-toggle="collapse" data-target="#advancedSearch" aria-expanded="false" aria-controls="collapseExample"><i class="fa fa-search"></i> Advanced Search
+                </button>
+                <!-- <button class="btn btn-success btn-sm mb-1" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fa fa-bars"></i> Export Data
+
+                </button>
+                <div class="dropdown-menu dropdown-menu-right">
+                    <a class="dropdown-item" (click)="exportData()">Excel</a>
+                    <a class="dropdown-item" (click)="exportPdf()">PDF</a>
+                </div> -->
+
+
+            </div>
+            <span id="responseText"></span>
+            <table class="table table-striped  table-sm row-border hover" datatable [dtOptions]="dtOptions">
+                <thead>
+                  <tr>
                     <th>firstname</th>
                     <th>lastname</th>
                     <th>email</th>
@@ -12,42 +29,34 @@
                     <th>username</th>
                     <th>status</th>
                     <th></th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr class="">
-                    <td>Jackson</td>
-                    <td>Kiarie</td>
-                    <td>jkiarie@lipalater.com</td>
-                    <td>072224353</td>
-                    <td>jkiarie</td>
-                    <td>Active</td>
-                    <td>
-                        <button type="button" class="btn btn-xs btn-primary details-control">    <i class="fa fa-eye"></i>                    
-                        </button>  
-                    </td>
-                </tr>
-                <tr class="">
-                    <td>Titus</td>
-                    <td>Kivite</td>
-                    <td>tkivite@lipalater.com</td>
-                    <td>072224353</td>
-                    <td>tkivite</td>
-                    <td>Active</td>
-                    <td class="details-control">
-                        <button type="button" class="btn btn-xs btn-primary ">    <i class="fa fa-eye"></i>                    
-                        </button>  
-                    </td>
-                </tr>
-               
-            </tbody>
-         </table>
+                  </tr>
+                </thead>
+                <tbody>
+                 <tr *ngFor="let group of users">
+                       <td>{{group.firstname}}</td>
+                       <td>{{group.lastname}}</td>
+                       <td>{{group.email}}</td>
+                       <td>{{group.phone}}</td>
+                       <td>{{group.username}}</td>
+                       <td>{{group.status}}</td>
+                       <td></td>
+                   </tr>
+                </tbody>
+              </table>
+           
+        </div>
     </div>
-</div>
+</block-ui>
+                
 
- <script>
-    $(document).ready(function() {
-        $('#userstable').DataTable();
-        $('#userstable_length').html('<p class="page-title">Users</p>');
-    } );
-    </script>
+
+
+
+
+
+
+
+
+
+
+
