removed backend plus onboarding updates

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,17 +17,18 @@
             <ul class="list-group list-group-flush">
               <li class="list-group-item">
                 <a class="nav-link sales-link"  routerLink="/onboarding">Partners 
-                  <i class="fas fa-handshake" style="color:#88b840"></i>
+                  <i class="fa fa-handshake-o" style="color:#88b840"></i>
                 </a>
               </li>
                <li class="list-group-item">
                 <a class="nav-link sales-link"  routerLink="/store">Stores 
-                  <i class="fa fa-shopping-cart" style="color:#88b840"></i>
+                  <i class="fa fa-city" style="color:#88b840"></i>
+                  <i class="fa fa-industry" style="color:#88b840"></i>
                 </a>
               </li>
                <li class="list-group-item">
                 <a class="nav-link sales-link"  routerLink="/pending">Pending 
-                  <i class="fa fa-cart-plus" style="color:#88b840"></i>
+                  <i class="fa fa-gift" style="color:#88b840"></i>
                 </a>
               </li>
               <li class="list-group-item">
@@ -39,7 +40,7 @@
             
               <li class="list-group-item">
                 <a class="nav-link released-link" routerLink="/released" >Released Items 
-                  <i class="fa fa-list" style="color:#88b840"></i>
+                  <i class="fa fa-sign-out" style="color:#88b840"></i>
                 </a>
               </li>
               <li class="list-group-item">
@@ -49,7 +50,7 @@
               </li>
               <li class="list-group-item">
                 <a class="nav-link released-link" routerLink="/users" >Users 
-                  <i class="fa fa-list" style="color:#88b840"></i>
+                  <i class="fa fa-users" style="color:#88b840"></i>
                 </a>
               </li>
               
@@ -94,23 +95,23 @@
             </li>
             <li class="nav-item">
               <a class="top-link sales-link" routerLink="/pending" >
-                <i class="fa fa-cart-plus" style="color:#88b840"></i> Pending
+                <i class="fa fa-gift" style="color:#88b840"></i> Pending
               </a>
             </li>
             <li class="nav-item">
               <a class="top-link notification-link" routerLink="/collections" >
-                <i class="fa fa-envelope" style="color:#88b840"></i> Collections 
+                <i class="fa fa-cart-plus" style="color:#88b840"></i> Collections 
               </a>
             </li>
             <li class="nav-item">
               <a class="top-link released-link" routerLink="/released">
-                <i class="fa fa-list" style="color:#88b840"></i> Released
+                <i class="fa fa-sign-out" style="color:#88b840"></i> Released
               </a>
             </li>
             
              <li class="nav-item">
               <a class="top-link sales-link" routerLink="/sales" >
-                <i class="fa fa-cart-plus" style="color:#88b840"></i> Sales
+                <i class="fa fa-list" style="color:#88b840"></i> Sales
               </a>
             </li>
             <li class="nav-item">
