--- a/src/app/pages/businessentity/businessentity.component.html
+++ b/src/app/pages/businessentity/businessentity.component.html
@@ -8,20 +8,24 @@
             <table class="table table-striped  table-sm row-border hover" datatable [dtOptions]="dtOptions">
                 <thead>
                   <tr>
+                     <th></th>
                     <th>Name</th>
-                    <th>Country</th>
-                    <th>Telephone</th>
                     <th>Email</th>
-                    <th>Status</th>
+                    <th>Mobile</th>
+                    <th>Location</th>
+                    <th>Speciality</th>
+                    <th>Action</th>
                   </tr>
                 </thead>
                 <tbody>
-                 <tr *ngFor="let group of data">
-                       <td>{{group.name}}</td>
-                       <td>{{group.country}}</td>
-                       <td>{{group.telephone}}</td>
-                       <td>{{group.email}}</td>
-                       <td>{{group.status}}</td>
+                 <tr *ngFor="let item of data; let i = index">
+                       <td>{{i+1}}</td>
+                       <td>{{item.name}}</td>
+                       <td>{{item.email}}</td>
+                       <td>{{item.mobile}}</td>
+                       <td>{{item.location}}</td>
+                       <td>{{item.speciality}}</td>                       
+                       <td> <div class="float-right"> <button type="button" class="btn btn-xs btn-info" title="View details" style="margin-right: 5px"> <i class="fa fa-eye"></i></button><button type="button" class="btn btn-xs btn-warning" title="Edit this business details" style="margin-right: 5px" (click)="onEdit(item)"> <i  class="fa fa-pencil"></i></button><button type="button" class="btn btn-xs btn-danger" title="Trash this Business details" (click)="onDelete(item)"> <i class="fa fa-trash"></i></button> </div></td>
                    </tr>
                 </tbody>
               </table>
