--- a/src/app/pages/businessentity/create/create.component.html
+++ b/src/app/pages/businessentity/create/create.component.html
@@ -28,6 +28,7 @@
             <div class="col-md-1"></div>
             <h4 class="col-md-11">Adding New Partner</h4>
           </div>
+          <hr>
         <div class="row">
          
             
@@ -35,7 +36,7 @@
                 <form  [formGroup]="beFormAdd" (ngSubmit)="onAddSubmit(beFormAdd)" class="col-md-11 form-horizontal">
                    
                   <div class="row form-group">
-                      <label class="control-label col-sm-3" for="title"> Registered Name</label>
+                      <label class="control-label col-sm-3" for="title"><span class="float-right"> Registered Name: </span></label>
                       <div class="col-sm-7">
                         <input type="text" formControlName="orgName" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.orgName.errors }"  placeholder="enter business registeres name" />
                        
@@ -50,7 +51,7 @@
                   
                  
                     <div class="row form-group">
-                        <label class="control-label col-sm-3" for="title"> Mobile </label>
+                        <label class="control-label col-sm-3" for="title"> <span class="float-right"> Mobile: </span> </label>
                       <div class="col-sm-7">                          
                           <input type="text" formControlName="orgMobile" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.orgMobile.errors }"  placeholder="contact phone number 2547......."/>
                           <div *ngIf="submitted && f.orgMobile.errors" class="invalid-feedback">
@@ -62,7 +63,7 @@
                     </div>                    
 
                     <div class="row form-group">
-                      <label class="control-label col-sm-3" for="title"> Location</label>
+                      <label class="control-label col-sm-3" for="title"> <span class="float-right"> Location: </span></label>
                       <div class="col-sm-7">
                         <input type="text" formControlName="orgLocation" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.orgLocation.errors }" placeholder="enter business HQ location"/>
                         <div *ngIf="submitted && f.orgLocation.errors" class="invalid-feedback">
@@ -73,7 +74,7 @@
                     </div>
 
                     <div class="row form-group">
-                        <label class="control-label col-sm-3" for="title"> Email</label>
+                        <label class="control-label col-sm-3" for="title"> <span class="float-right"> Email: </span></label>
                         <div class="col-sm-7">
                           <input type="text" formControlName="orgEmail" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.orgEmail.errors }" placeholder="enter the business email address"/>
                           <div *ngIf="submitted && f.orgEmail.errors" class="invalid-feedback">
@@ -84,7 +85,7 @@
                         </div>
                     </div>
                     <div class="row form-group">
-                        <label class="control-label col-sm-3" for="title"> Telephone</label>
+                        <label class="control-label col-sm-3" for="title"> <span class="float-right"> Telephone: </span></label>
                         <div class="col-sm-7">
                           <input type="text" formControlName="orgTelephone" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.orgTelephone.errors }" />
                           <div *ngIf="submitted && f.orgTelephone.errors" class="invalid-feedback">
@@ -94,7 +95,7 @@
                     </div>
 
                     <div class="row form-group">
-                        <label class="control-label col-sm-3" for="title">Year of Incorporation</label>
+                        <label class="control-label col-sm-3" for="title"><span class="float-right"> Years of Incorporation: </span></label>
                         <div class="col-sm-7">
                           <input type="text" formControlName="orgYearsOfOperation" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.orgYearsOfOperation.errors }" />
                           <div *ngIf="submitted && f.orgYearsOfOperation.errors" class="invalid-feedback">
@@ -103,44 +104,28 @@
                         </div>
                     </div>
                     <div class="row form-group">
-                      <label class="control-label col-sm-3" for="title">Speciality</label>
-                      <div class="col-sm-2" *ngFor="let item of specialityOptions">
-                      <label>
-                        <input type="radio" value="{{item.name}}" class="form-control" formControlName="orgSpeciality">
-                          <span>{{item.name}}</span>
-                      </label>
-                      </div>
-                      
-                  </div>
-                  <div class="row form-group" formArrayName="orgSpeciality" *ngFor="let item of beFormAdd.controls['orgSpeciality'].controls; let i = index;">
-                    <label class="control-label col-sm-3" for="title"></label>
-                     <div [formGroupName]="i" class="col-sm-7">
-                        <label class="custom-control custom-checkbox">
-                          <input formControlName="speciality" class=" checkbox-main checkbox-danger" type="checkbox">
-                          <span class="custom-control-indicator"></span>
-                          <span class="custom-control-description align-middle">{{ beFormAdd.controls['orgSpeciality'].controls[i].controls.name.value }}</span>
-                      </label>
-                    </div>
-                </div>
+                      <label class="control-label col-sm-3" for="title"><span class="float-right"> Speciality: </span></label>
+                          <div class="col-sm-7">
+                            <select formControlName="orgSpeciality" class="form-control validation-field">
+                              <option value="">Select Speciality</option>
+                          <option *ngFor="let o of specialityOptions" [ngValue]="o.name">{{o.name}}</option>
+                      </select>
+                            <small class="text-danger" *ngIf="beFormAdd.get('orgSpeciality').touched && beFormAdd.get('orgSpeciality').hasError('required')">Status is required</small>
+                        </div>                                          
+                     </div>
+                
+                 
+                    
                     <div class="row form-group">
                         <div class="col-sm-3"></div>
                         <div class="col-sm-7">
-
-                    <div *ngIf="errorMessage !== 'SHOWERROR'" class="alert alert-danger alert-dismissible fade show" role="alert">
-                        <button aria-label="Close" class="close" data-dismiss="alert" type="button">
-                          <span aria-hidden="true">×</span>
-                      </button>
-                        <strong>Error!</strong> {{errorMessage}}
-                    </div>
-                    </div>
-                    </div>
-                    <div class="row form-group">
-                        <div class="col-sm-3"></div>
-                        <div class="col-sm-7">
-                          <div class="row align-items-right">
-                              <button  class="btn btn-success" type="submit">Submit</button>
+                          <div class="float-right ">
+                            <button  class="btn btn-danger " type="cancel" style="margin-right: 10px;
+    min-width: 100px;" routerLink="/onboarding/">Cancel</button>
+                            <button  class="btn btn-success " type="submit" style="min-width: 100px;">Submit</button>
                           </div>
-                        </div></div>
+                        </div>
+                      </div>
                     
                  
                   </form>
