Store CRUD operations

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,7 +21,7 @@
                 </a>
               </li>
                <li class="list-group-item">
-                <a class="nav-link sales-link"  routerLink="/store">Stores 
+                <a class="nav-link sales-link"  routerLink="/stores">Stores 
                   <i class="fa fa-city" style="color:#88b840"></i>
                   <i class="fa fa-industry" style="color:#88b840"></i>
                 </a>
